# demo_bot

./: CMakeLists.txt  README.md  package.xml
config/: view_bot.rviz
description/: colors.xacro  lidar.xacro  robot_core.xacro
doc/: ReadMe.md
launch/: launch_gaz.launch.py  rsp.launch.py
worlds/: gazebo_world.world  non_empty.world
