<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_bot</name>
  <version>0.0.1</version>
  <description>demo bot</description>
  <maintainer email="pravinkmr2619@gmail.com">Pravinkumar</maintainer>
  <license>This is demo project to get started with ros</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
